@@ -1,5 +1,8 @@
 * Version 1.0.25:
  - More gcc 2 compatibility, thanks to Todd Rinaldo.
+ - Show symlinks as symlinks in MLSD, except when the broken client
+compatibility mode is turned on and links are not dangling (just like the
+old LIST and NLIST commands). Reported by Mime Cuvalo.
 
 * Version 1.0.24:
  - Refuse empty passwords in LDAP bind mode. Reported by Henning Brauer.
